@@ -2,12 +2,10 @@ __NPN_Construct
 __NPN_CreateObject
 __NPN_Enumerate
 __NPN_Evaluate
-__NPN_GetAuthenticationInfo
 __NPN_GetIntIdentifier
 __NPN_GetProperty
 __NPN_GetStringIdentifier
 __NPN_GetStringIdentifiers
-__NPN_GetValueForURL
 __NPN_HasMethod
 __NPN_HasProperty
 __NPN_IdentifierIsString
@@ -20,9 +18,8 @@ __NPN_RemoveProperty
 __NPN_RetainObject
 __NPN_SetException
 __NPN_SetProperty
-__NPN_SetValueForURL
 __NPN_UTF8FromIdentifier
 __ZN7WebCore16ScriptController20windowScriptNPObjectEv
 __ZN7WebCore16ScriptController29cleanupScriptObjectsForPluginEPv
-__ZNK7WebCore12RenderObject4viewEv
 __ZNK7WebCore9FrameView22windowClipRectForLayerEPKNS_11RenderLayerEb
+__ZNK7WebCore12RenderObject4viewEv
